Add structured tasks.json
- tasks.json with titles, tasks, and timers

--- a/tasks.json
+++ b/tasks.json
@@ -1,90 +1,90 @@
 [
-    "End-game-crisis - Trinke dein Getränk auf Ex.",
-    "10 Shot Karte - Trinke 10 Shots.",
-    "WTF Karte - Trinke einen Shot zur Wiederherstellung des Normalzustands.",
-    "Wahrheiten - Wirf eine Wahrheit in die Runde.",
-    "Epidemie - Desinfiziere die Getränke der Mitspieler mit 2cl Shots.",
-    "Komplett im Arsch - Setze zur Sicherheit eine Runde aus.",
-    "Frauen, Kinder und Menschen - Alle leeren ihr Getränk bis du wieder dran bist.",
-    "Penis - Schreie „Penis“ lauter als deine Nachbarn; der Leisere trinkt einen Shot.",
-    "Der Messiahs - Preise den Messiahs.",
-    "Martini Boi - Nutze deine Hose als Cape zur Gerechtigkeit.",
-    "3facher Witz - Erzähle einen Witz und wiederhole ihn zwei Runden lang.",
-    "Fusion - Mische die Getränke deiner beiden Nachbarn zu einem Superdrink und gönne ihn dir gleich.",
-    "Game of Tag - Fange die Mitspieler ein; die ersten beiden trinken einen Shot.",
-    "Weihnachtsbäckerei - Verschenke Shots an die Braven.",
-    "Weihnachtsbesinnungsabend - Wünsch allen frohe Weihnachten und trinke darauf.",
-    "Vin Diesel - Präsentiere deine Muskeln, zieh die Hose aus.",
-    "Feng-Shui - Beschwere dich lautstark über die Inneneinrichtung.",
-    "Sexy Cousine - Lege dich eine Runde lang auf den Bauch.",
-    "Mama calling - Ignoriere dein Handy und rufe am Ende des Spiels deine Mama an.",
-    "Die irre Heldentour des Billy Lynn - Gestehe deinen Mitspielern deine Liebe zu ihnen.",
-    "Spielefehler - Keine Strafe.",
-    "Bedienfehler - Trinke einen Shot.",
-    "Letzte U-Bahn - Leere dein Getränk in 3 Minuten.",
-    "Shotgun - Verteile einen Shot, auch wenn du verloren hast.",
-    "AWP - Setze eine Runde aus und beobachte die anderen ganz genau.",
-    "Terraforming - Mische dein Getränk mit 2cl Ethanol.",
-    "Zieh Zwei Karte - Der nächste Spieler darf 2x klicken.",
-    "Farbwahlkarte - Wie lautet deine Lieblingsfarbe.",
-    "Fairer Sieg - Trinke einen Gewinner-Schluck, aber spielt weiter.",
-    "Selfie-Time - Mache einen Oben-Ohne-Selfie.",
-    "Kraftprotz - Mache 10 Liegestütze.",
-    "Flitzer-Alarm - Renne einmal um deine Hütte.",
-    "Durchhaltevermögen - Stehe 10 Minuten lang.",
-    "Insektenjäger - Fange ein Insekt (falls nicht möglich: Austrinken).",
-    "Cotton Eye Joe - Tanze zu Cotton Eye Joe in voller Lautstärke.",
-    "Naturbursche - Finde und verzehre etwas Essbares aus dem Garten.",
-    "Religionswechsel - Setze ein Nudelsieb zu Ehren des fliegenden Spaghettimonsters auf.",
-    "Illegale Aktion - Mach etwas „Gangsterhaftes“ (aber nichts Illegales!).",
-    "Gläser-Party - Trinke einen Schluck aus jedem Glas der Runde.",
-    "Nichtraucher - Ab jetzt gilt Rauchverbot; jede Zigarette zählt als Schummeln.",
-    "Steinzeit-Überleben - Dein Handy ist für die Runde ein Stein und darf nicht bewegt werden.",
-    "Sockenfreund Fridolin - Deine Socke spricht ab sofort für dich.",
-    "Team-Shot - Gönn dir und einem Freund einen Schnaps.",
-    "Tischkriecher - Kriech unter den Tisch, bis dein Getränk leer ist.",
-    "Planänderung - Die Aufgabe des nächsten Spielers erledigst doch du.",
-    "Luftgitarren-Solo - Spiele ein episches Luftgitarren-Solo für 30 Sekunden.",
-    "Reverse-Drink - Trinke dein Getränk mit gekreuzten Armen.",
-    "Mikrofon-Meister - Rappt oder singt spontan 4 Zeilen.",
-    "Fitnesspause - Mache 20 Kniebeugen.",
-    "Becher-Balance - Balanciere einen Becher 10 Sekunden lang auf deinem Kopf.",
-    "Namenkette - Nenne 2 Personen aus der Runde rückwärts.",
-    "Freestyle-Dichter - Reime spontan zu einem Thema, das die Gruppe wählt.",
-    "Spaghetti-Macher - Leg eine rohe Nudel (Form deiner Wahl) in ein Getränk und lass es drinnen.",
-    "Schluck für die Gruppe - Jeder nimmt einen Schluck, natürlich außer dir.",
-    "Truth or Dare - Stelle einer Person eine Frage oder fordere sie zu etwas auf.",
-    "Selfie-Streit - Mache ein Selfie mit der Person, die du am wenigsten kennst.",
-    "Koch-Tutorial - Erkläre, wie man Nudeln mit Pesto zubereitet – Schritt für Schritt.",
-    "Mumien-Spiel - Lasse dich mit Klopapier einwickeln.",
-    "Superheld-Name - Gib allen Anwesenden einen Superheldennamen.",
-    "Eiskalter Shot - Trinke draußen einen Shot.",
-    "Hände Hoch - Bleibe mit beiden Armen 5 Minuten lang oben.",
-    "Bier-Meditation - Starre meditativ 1 Minute lang auf dein Getränk.",
-    "Tier-Party - Mach das Geräusch deines Lieblingstiers.",
-    "Sitzverbot - Stehe für die nächsten 5 Minuten.",
-    "Gruppenanführer - Leite die Gruppe für 2 Minuten bei Sportübungen an.",
-    "Würfelwurf - Würfle: Gerade Zahl = du trinkst, ungerade Zahl = die anderen trinken.",
-    "Zeitschätz-Spiel - Schätze 1 Minute ohne Uhr.",
-    "Rückwärts sprechen - Sage „Ich liebe dieses Spiel“ rückwärts.",
-    "Hütchenspiel - Verstecke einen Gegenstand im Raus; die Gruppe muss suchen.",
-    "Monsterstimme - Sprich wie ein Monster für die nächsten 2 Runden.",
-    "Schluck in Ehren - Trinke aus einem Glas deiner Wahl.",
-    "Versteck-Spiel - Verstecke dich für 1 Minute im Raum.",
-    "Pantomime-Profi - Stelle ein bekanntes Tier pantomimisch dar.",
-    "Lieblingssong-Show - Singe den Refrain deines Lieblingsliedes laut vor.",
-    "Witziger Tänzer - Tanze wie ein Roboter für 30 Sekunden.",
-    "Mund-Zeichner - Zeichne mit deinem Mund einen Smiley auf ein Stück Papier.",
-    "Prost-Künstler - Sage „Prost“ auf 5 verschiedene Arten.",
-    "Buddy-System - Umarme jemanden in der Runde für 10 Sekunden.",
-    "Bauchredner - Sprich, ohne dabei die Lippen zu bewegen.",
-    "Löffeltanz - Halte einen Löffel zwischen deinen Zähnen und tanze.",
-    "Erfinder-Modus - Erfinde ein neues Wort und erkläre, was es bedeutet.",
-    "Gruppen-DJ - Lege ein Lied ein und tanze dazu.",
-    "Postkarten-Spiel - Beschreibe spontan einen Urlaub von dir",
-    "Kopfdreh-Challenge - Drehe deinen Kopf komplett im Kreis – langsam.",
-    "Bananentelefon - Telefoniere eine Minute lang mit einer Banane bzw. Obst deiner Wahl",
-    "Schlürf-Challenge - Trinke dein Getränk so laut wie möglich.",
-    "Platzwechsel - Tausche deinen Platz mit einer Person.",
-    "Gruppenfoto - Macht zusammen ein Gruppenfoto und postet es später als Erinnerung."
+    { "title": "End-game-crisis", "task": "Trinke dein Getränk auf Ex." },
+    { "title": "10 Shot Karte", "task": "Trinke 10 Shots." },
+    { "title": "WTF Karte", "task": "Trinke einen Shot zur Wiederherstellung des Normalzustands." },
+    { "title": "Wahrheiten", "task": "Wirf eine Wahrheit in die Runde." },
+    { "title": "Epidemie", "task": "Desinfiziere die Getränke der Mitspieler mit 2cl Shots." },
+    { "title": "Komplett im Arsch", "task": "Setze zur Sicherheit eine Runde aus." },
+    { "title": "Frauen, Kinder und Menschen", "task": "Alle leeren ihr Getränk bis du wieder dran bist." },
+    { "title": "Penis", "task": "Schreie „Penis“ lauter als deine Nachbarn; der Leisere trinkt einen Shot." },
+    { "title": "Der Messiahs", "task": "Preise den Messiahs." },
+    { "title": "Martini Boi", "task": "Nutze deine Hose als Cape zur Gerechtigkeit." },
+    { "title": "3facher Witz", "task": "Erzähle einen Witz und wiederhole ihn zwei Runden lang." },
+    { "title": "Fusion", "task": "Mische die Getränke deiner beiden Nachbarn zu einem Superdrink und gönne ihn dir gleich." },
+    { "title": "Game of Tag", "task": "Fange die Mitspieler ein; die ersten beiden trinken einen Shot." },
+    { "title": "Weihnachtsbäckerei", "task": "Verschenke Shots an die Braven." },
+    { "title": "Weihnachtsbesinnungsabend", "task": "Wünsch allen frohe Weihnachten und trinke darauf." },
+    { "title": "Vin Diesel", "task": "Präsentiere deine Muskeln, zieh die Hose dafür aus." },
+    { "title": "Feng-Shui", "task": "Beschwere dich lautstark über die Inneneinrichtung." },
+    { "title": "Sexy Cousine", "task": "Lege dich eine Runde lang auf den Bauch." },
+    { "title": "Mama calling", "task": "Ignoriere dein Handy und rufe am Ende des Spiels deine Mama an." },
+    { "title": "Die irre Heldentour des Billy Lynn", "task": "Gestehe deinen Mitspielern deine Liebe zu ihnen." },
+    { "title": "Spielefehler", "task": "Keine Strafe." },
+    { "title": "Bedienfehler", "task": "Trinke einen Shot." },
+    { "title": "Letzte U-Bahn", "task": "Leere dein Getränk in 3 Minuten.", "timer": 180 },
+    { "title": "Shotgun", "task": "Verteile einen Shot, auch wenn du verloren hast." },
+    { "title": "AWP", "task": "Setze eine Runde aus und beobachte die anderen ganz genau." },
+    { "title": "Terraforming", "task": "Mische dein Getränk mit 2cl Ethanol." },
+    { "title": "Zieh Zwei Karte", "task": "Der nächste Spieler darf 2x klicken." },
+    { "title": "Farbwahlkarte", "task": "Wie lautet deine Lieblingsfarbe?" },
+    { "title": "Fairer Sieg", "task": "Trinke einen Gewinner-Schluck, aber spielt weiter." },
+    { "title": "Selfie-Time", "task": "Mache einen Oben-Ohne-Selfie." },
+    { "title": "Kraftprotz", "task": "Mache 10 Liegestütze." },
+    { "title": "Flitzer-Alarm", "task": "Renne einmal um deine Hütte.", "timer": 60 },
+    { "title": "Durchhaltevermögen", "task": "Stehe 10 Minuten lang.", "timer": 600 },
+    { "title": "Insektenjäger", "task": "Fange ein Insekt (falls nicht möglich: Austrinken)." },
+    { "title": "Cotton Eye Joe", "task": "Tanze zu Cotton Eye Joe in voller Lautstärke.", "timer": 120 },
+    { "title": "Naturbursche", "task": "Finde und verzehre etwas Essbares aus dem Garten." },
+    { "title": "Religionswechsel", "task": "Setze ein Nudelsieb zu Ehren des fliegenden Spaghettimonsters auf." },
+    { "title": "Illegale Aktion", "task": "Mach etwas „Gangsterhaftes“ (aber nichts Illegales!)." },
+    { "title": "Gläser-Party", "task": "Trinke einen Schluck aus jedem Glas der Runde." },
+    { "title": "Nichtraucher", "task": "Ab jetzt gilt Rauchverbot; jede Zigarette zählt als Schummeln." },
+    { "title": "Steinzeit-Überleben", "task": "Dein Handy ist für die Runde ein Stein und darf nicht bewegt werden." },
+    { "title": "Sockenfreund Fridolin", "task": "Deine Socke spricht ab sofort für dich." },
+    { "title": "Team-Shot", "task": "Gönn dir und einem Freund einen Schnaps." },
+    { "title": "Tischkriecher", "task": "Kriech unter den Tisch, bis dein Getränk leer ist." },
+    { "title": "Planänderung", "task": "Die Aufgabe des nächsten Spielers erledigst doch du." },
+    { "title": "Luftgitarren-Solo", "task": "Spiele ein episches Luftgitarren-Solo für 30 Sekunden.", "timer": 30 },
+    { "title": "Reverse-Drink", "task": "Trinke dein Getränk mit gekreuzten Armen." },
+    { "title": "Mikrofon-Meister", "task": "Rappt oder singt spontan 4 Zeilen." },
+    { "title": "Fitnesspause", "task": "Mache 20 Kniebeugen." },
+    { "title": "Becher-Balance", "task": "Balanciere einen Becher 10 Sekunden lang auf deinem Kopf.", "timer": 10 },
+    { "title": "Namenkette", "task": "Nenne 2 Personen aus der Runde rückwärts." },
+    { "title": "Freestyle-Dichter", "task": "Reime spontan zu einem Thema, das die Gruppe wählt." },
+    { "title": "Spaghetti-Macher", "task": "Leg eine rohe Nudel (Form deiner Wahl) in ein Getränk und lass es drinnen." },
+    { "title": "Schluck für die Gruppe", "task": "Jeder nimmt einen Schluck, natürlich außer dir." },
+    { "title": "Truth or Dare", "task": "Stelle einer Person eine Frage oder fordere sie zu etwas auf." },
+    { "title": "Selfie-Streit", "task": "Mache ein Selfie mit der Person, die du am wenigsten kennst." },
+    { "title": "Koch-Tutorial", "task": "Erkläre, wie man Nudeln mit Pesto zubereitet – Schritt für Schritt." },
+    { "title": "Mumien-Spiel", "task": "Lasse dich mit Klopapier einwickeln." },
+    { "title": "Superheld-Name", "task": "Gib allen Anwesenden einen Superheldennamen." },
+    { "title": "Eiskalter Shot", "task": "Trinke draußen einen Shot." },
+    { "title": "Hände Hoch", "task": "Bleibe mit beiden Armen 5 Minuten lang oben.", "timer": 300 },
+    { "title": "Bier-Meditation", "task": "Starre meditativ 1 Minute lang auf dein Getränk.", "timer": 60 },
+    { "title": "Tier-Party", "task": "Mach das Geräusch deines Lieblingstiers." },
+    { "title": "Sitzverbot", "task": "Stehe für die nächsten 5 Minuten.", "timer": 300 },
+    { "title": "Gruppenanführer", "task": "Leite die Gruppe für 2 Minuten bei Sportübungen an.", "timer": 120 },
+    { "title": "Würfelwurf", "task": "Würfle: Gerade Zahl = du trinkst, ungerade Zahl = die anderen trinken." },
+    { "title": "Zeitschätz-Spiel", "task": "Schätze 1 Minute ohne Uhr.", "timer": 60 },
+    { "title": "Rückwärts sprechen", "task": "Sage „Ich liebe dieses Spiel“ rückwärts." },
+    { "title": "Hütchenspiel", "task": "Verstecke einen Gegenstand im Raum; die Gruppe muss suchen." },
+    { "title": "Monsterstimme", "task": "Sprich wie ein Monster für die nächsten 2 Runden.", "timer": 120 },
+    { "title": "Schluck in Ehren", "task": "Trinke aus einem Glas deiner Wahl." },
+    { "title": "Versteck-Spiel", "task": "Verstecke dich für 1 Minute im Raum.", "timer": 60 },
+    { "title": "Pantomime-Profi", "task": "Stelle ein bekanntes Tier pantomimisch dar." },
+    { "title": "Lieblingssong-Show", "task": "Singe den Refrain deines Lieblingsliedes laut vor." },
+    { "title": "Witziger Tänzer", "task": "Tanze wie ein Roboter für 30 Sekunden.", "timer": 30 },
+    { "title": "Mund-Zeichner", "task": "Zeichne mit deinem Mund einen Smiley auf ein Stück Papier." },
+    { "title": "Prost-Künstler", "task": "Sage „Prost“ auf 5 verschiedene Arten." },
+    { "title": "Buddy-System", "task": "Umarme jemanden in der Runde für 10 Sekunden.", "timer": 10 },
+    { "title": "Bauchredner", "task": "Sprich, ohne dabei die Lippen zu bewegen." },
+    { "title": "Löffeltanz", "task": "Halte einen Löffel zwischen deinen Zähnen und tanze." },
+    { "title": "Erfinder-Modus", "task": "Erfinde ein neues Wort und erkläre, was es bedeutet." },
+    { "title": "Gruppen-DJ", "task": "Lege ein Lied ein und tanze dazu." },
+    { "title": "Postkarten-Spiel", "task": "Beschreibe spontan einen Urlaub von dir." },
+    { "title": "Kopfdreh-Challenge", "task": "Drehe deinen Kopf komplett im Kreis – langsam." },
+    { "title": "Bananentelefon", "task": "Telefoniere eine Minute lang mit einer Banane bzw. Obst deiner Wahl.", "timer": 60 },
+    { "title": "Schlürf-Challenge", "task": "Trinke dein Getränk so laut wie möglich." },
+    { "title": "Platzwechsel", "task": "Tausche deinen Platz mit einer Person." },
+    { "title": "Gruppenfoto", "task": "Macht zusammen ein Gruppenfoto und postet es später als Erinnerung." }
 ]
