--- a/tasks.json
+++ b/tasks.json
@@ -631,5 +631,10 @@
         "title": "Gleichgewichtstest",
         "task": "Stehe auf einem Bein für 20 Sekunden.",
         "timer": 20
+    },
+    {
+    "title": "LOL-Challenge", 
+    "task": "Niemand darf lachen! Für 5 Minuten gilt ein striktes Lachverbot. Wer lacht, muss einen Schluck trinken.", 
+    "timer": 300
     }
 ]
